# ARTE-PRESTO

./: FRB_generator.py  README.md  full_pipeline_doc.txt  multiple_FRB_generator.py  npz_to_fil.py
pulse-simulation-main/: README.md  pyproject.toml
pulse-simulation-main/config/: config.ini
pulse-simulation-main/frb_search/: candidates.py  cands_classifier.py  config.py  converter.py  frb_search.py  periodicity.py  plot_waterfall.py  simulate_pulse.py  telegram_bot.py  voltage_sim.py
pulse-simulation-main/frb_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
